# shiki-cards-bot

./: .dockerignore  .env.enc  .env.example  .gitignore  .sops.yaml  Dockerfile  README.md  compose.dev.yml  compose.yml  devbox.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  secrets.enc.env
.github/workflows/: deploy.yml
bot/app/: cache.py  main.py  webapp.html
bot/app/static/: card-renderer.js  webapp.css  webapp.js
bot/app/static/ds/: _ds_bundle.css  _ds_bundle.js
renderer/: Dockerfile  package.json  server.js
tests/: test_main.py
